# BD

./: .gitignore  BD.sln
APFE_1000_2000/: apfe_submit.md
APFE_113968_113920/: apfe_submit.md
APFT_113920_113968/: apft_submit.md  relatorio_complementar.md
APFT_113920_113968/sql/: ScoreSavant_ddl.sql  Stored_Procedures.sql  Triggers.sql  User_Defined_Functions.sql  Views.sql
Aula06/: aula6_submit.md
Aula1/: notes.md
Aula1/Extra/aula1-python-project/: README.md  app.py  pyproject.toml  requirements.txt
Aula1/Extra/aula1-python-project/templates/: index.html
Aula1/MyWinFormsApp/: Form1.Designer.cs  Form1.cs  Form2.cs  Program.cs
Aula2/: aula2_submit.md  ex4a.drawio
Aula3/: aula3_submit.md  ex1c.drawio  ex3a.drawio  ex3d.drawio
Aula4/: atl.sql  aula4_submit.md  conferencias.sql  encomendas.sql  medicamentos.sql  rent_a_car.sql  reserva_de_voos.sql
Aula5/: aula5_submit.md
Aula6/: aula6_submit.md  company_data.sql  company_ddl.sql  encomendas_data.sql  encomendas_ddl.sql  medicamentos_data.sql  medicamentos_ddl.sql
Aula7/: aula7_submit.md
Aula7/contacts-app-python-v1/: conf.ini  pyproject.toml
Aula7/contacts-app-python-v1/persistence/: session.py
Aula7/part1/: app.py
Aula8/: aula8_submit.md
Aula9/: aula9_submit.md
Guiao2_113968_113920/: aula2_submit.md  ex4a.drawio  ex4adrawio.drawio
