[tool.poetry]
name = "aula1-python"
version = "0.1.0"
description = ""
authors = ["Tiago Marques Godinho <tmgodinho@ua.pt>"]

[tool.poetry.dependencies]
python = ">=3.8"
Flask = "^3.0.2"
pyodbc = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
